Updated UI and fixed bugs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
             <input type="text" id="input" class="input" placeholder="Create Password" readonly>  
         
-            <i class="fa-regular fa-copy"></i>
+            <i class="fa-regular fa-copy fa-2x"></i>
 
         </div>
 
@@ -34,9 +34,11 @@
 
     </div>
 
-    <div class="alert-container">
-
+    <div class="alert-container ">
+         Password Copied
     </div>
+
+    <script src="index.js"></script>
 
 </body>
 </html>
